# games

./: .gitignore  shell.nix
FlappyBird/: Player.gdns  PlayerNode.tscn  Walls.gdns  Walls.tscn  World.tscn  project.godot
FlappyBird/.import/: flappy_sprite.png-889888b7b1376cdf3c560753b4f4a1e1.md5  flappy_sprite.png-889888b7b1376cdf3c560753b4f4a1e1.stex  flappy_sprite.png-a9aa69b1eab6f5c9fd14863173bae798.md5  flappy_sprite.png-a9aa69b1eab6f5c9fd14863173bae798.stex  pipe.png-d1f75b14bde36399e8b8e081ce8a470c.md5  pipe.png-d1f75b14bde36399e8b8e081ce8a470c.stex  white.png-936ea7d0834e1e21adf362ba74ff2135.md5  white.png-936ea7d0834e1e21adf362ba74ff2135.stex  white_16x16.png-3fe9b1c699b53af628b82c3d0f6d381c.md5
FlappyBird/assets/: flappy_sprite.png.import  pipe.png.import  white_16x16.png.import
FlappyBird/code/: Cargo.toml
FlappyBirdv2/: World.gdns  World.tscn  project.godot
FlappyBirdv2/.import/: background.png-db55ec47224fbca7de3496d6823058f9.md5  background.png-db55ec47224fbca7de3496d6823058f9.stex  bird.png-c92121613a657ce6291de8e14467a3aa.md5  bird.png-c92121613a657ce6291de8e14467a3aa.stex  die.wav-087ffdeea77da2d281dd49bf11cf0272.md5  die.wav-087ffdeea77da2d281dd49bf11cf0272.sample  gameover.png-946e8fcf915159ca3d67a237cc9185d9.md5  gameover.png-946e8fcf915159ca3d67a237cc9185d9.stex  ground.png-1c656240c2e4e7695bb1d95ac269a933.md5  ground.png-1c656240c2e4e7695bb1d95ac269a933.stex  (+12 more)
FlappyBirdv2/code/: Cargo.toml
FlappyBirdv2/code/src/: hud.rs  lib.rs  obstacle.rs  obstacle_spawner.rs  player.rs  world.rs
N00bgaem/: Root.tscn  project.godot
(+26 files in other folders)
