[package]
name = "flappy-bird-demo"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

[profile.dev]
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9"
rand = "0.8.3"

[lib]
crate-type = ["cdylib"]
